# LuftFixed

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
public/catalog/: actions.tr.json
scripts/: install-linux.sh  patch-tauri-html.mjs  validate-catalog.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ActionCatalog.tsx  BrowserInstallGuide.tsx  ExecutionPanel.tsx  Sidebar.tsx  SystemSummary.tsx
src/data/: catalog.ts
src/lib/: tauri.ts
