[package]
name = "luftfixed"
version = "0.1.0"
description = "A Linux helper tool for one-click system setup and maintenance."
authors = ["LuftConnect"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
